Add gradle properties.